# vulkan-rendering-journey

./: .gitmodules  README.md
triangle/: meson.build
triangle/include/: app.hpp  device.hpp  pipeline.hpp  swapchain.hpp  window.hpp
triangle/shaders/: simple_shader.frag  simple_shader.vert
triangle/src/: app.cpp  device.cpp  main.cpp  pipeline.cpp  window.cpp
tutorial-engine/: .gitignore  meson.build
tutorial-engine/include/: app.hpp  device.hpp  model.hpp  pipeline.hpp  swapchain.hpp  window.hpp
tutorial-engine/shaders/: meson.build  simple_shader.frag  simple_shader.vert
tutorial-engine/src/: app.cpp  main.cpp  model.cpp  pipeline.cpp  swapchain.cpp  window.cpp
vkguide-tutorial/: .gitignore  build.sh  meson.build
vkguide-tutorial/assets/shaders/: basic_flat_mesh.frag  basic_normalcolor_mesh.vert  fancytriangle.frag  fancytriangle.vert  meson.build  textured_lit.frag  tri_mesh.vert  triangle.vert
vkguide-tutorial/include/: common_includes.h  constants.h  engine.hpp  mesh.hpp  pipeline.hpp  textures.hpp  types.hpp
vkguide-tutorial/src/: engine.cpp  engine.hpp  main.cpp  mesh.cpp  pipeline.cpp
vkguide-tutorial/src/engine/: draw.cpp  init.cpp  input.cpp  material.cpp  mesh.cpp  scene.cpp  shader.cpp  textures.cpp
vulkan-ngp-nerf/: .gitignore  CMakeLists.txt  meson.build
vulkan-ngp-nerf/assets/: CMakeLists.txt
vulkan-ngp-nerf/assets/shaders/: basic_flat_mesh.frag  basic_normalcolor_mesh.vert  meson.build  nerf_ss.frag
vulkan-ngp-nerf/include/: common_includes.h  engine.hpp  mesh.hpp  ngp.h  ngp.hpp  pipeline.hpp  textures.hpp  types.hpp
vulkan-ngp-nerf/src/: engine.cpp  main.cpp  main.cu  mesh.cpp  pipeline.cpp
vulkan-ngp-nerf/src/engine/: init.cu  input.cpp  mesh.cpp  ngp.cu  scene.cpp  scene.cu  shader.cpp  textures.cpp
vulkano-tutorial/: Cargo.toml
vulkano-tutorial/src/: main.rs
